Added medium link

--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@
 						<li><a href="mailto:isha.wakankar@gmail.com" target="_blank"><i class="fa fa-envelope"></i></a></li>
 						<li><a href="https://www.linkedin.com/in/isha-wakankar-837b9b102/" target="_blank"><i class="fa fa-linkedin"></i></a></li>
 						<li><a href="http://github.com/ishawakankar" target="_blank"><i class="fa fa-github"></i></a></li>
+						<li><a href="http://medium.com/@ishawakankar" target="_blank"><img src="./img/medium.png" style="height: 10%; width: 7%; padding-top: 2%; " /></a></li>
 					</ul>
 			    </div>
 			</div>
