Changes for mobile view

--- a/index.html
+++ b/index.html
@@ -14,10 +14,105 @@
 	<link href='http://fonts.googleapis.com/css?family=Playfair+Display+SC:700' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
 	<style>
+		html, body {
+			overflow-x: hidden;
+		}
 		.intro h1:before {
 			/* Edit this with your name or anything else */
 			content: 'HELLO!';
 		}
+		@media (max-width: 1105px) {
+        .intro h1:before {
+			text-align: center;
+			align-items: center;
+			align-self: auto;
+			align-content: center;
+			padding-left: 18%;
+			padding-right: 10%;
+			padding-top: 5%;
+			margin-bottom: 10%;
+			padding-bottom: 5%;
+			/* font-size: 40vw;
+			font-size: 50vh; */
+			font-size: 700%;
+        }
+		@media (max-width: 900px) {
+        .intro h1:before {
+			text-align: center;
+			align-items: center;
+			align-self: auto;
+			align-content: center;
+			padding-left: 32%;
+			padding-right: 10%;
+			padding-top: 5%;
+			margin-bottom: 10%;
+			padding-bottom: 5%;
+			/* font-size: 40vw;
+			font-size: 50vh; */
+			font-size: 600%;
+        }
+		@media (max-width: 775px) {
+        .intro h1:before {
+			text-align: center;
+			align-items: center;
+			align-self: auto;
+			align-content: center;
+			padding-left: 52%;
+			padding-right: 10%;
+			padding-top: 5%;
+			margin-bottom: 10%;
+			padding-bottom: 5%;
+			/* font-size: 40vw;
+			font-size: 50vh; */
+			font-size: 500%;
+        }
+		@media (max-width: 689px) {
+        .intro h1:before {
+			text-align: center;
+			align-items: center;
+			align-self: auto;
+			align-content: center;
+			padding-left: 56%;
+			padding-right: 10%;
+			padding-top: 5%;
+			margin-bottom: 10%;
+			padding-bottom: 5%;
+			/* font-size: 40vw;
+			font-size: 50vh; */
+			font-size: 500%;
+        }
+		@media (max-width: 636px) {
+        .intro h1:before {
+			text-align: center;
+			align-items: center;
+			align-self: auto;
+			align-content: center;
+			padding-left: 62%;
+			padding-right: 10%;
+			padding-top: 5%;
+			margin-bottom: 10%;
+			padding-bottom: 5%;
+			/* font-size: 40vw;
+			font-size: 50vh; */
+			font-size: 450%;
+        }
+		@media (max-width: 567px) {
+        .intro h1:before {
+			text-align: center;
+			align-items: center;
+			align-self: auto;
+			align-content: center;
+			padding-left: 96%;
+			padding-right: 10%;
+			padding-top: 5%;
+			margin-bottom: 10%;
+			padding-bottom: 5%;
+			/* font-size: 40vw;
+			font-size: 50vh; */
+			font-size: 300%;
+        }
+    }
+
 	</style>
 </h>
 <body>
@@ -41,7 +136,7 @@
 	<div class="work section second" id="experiences">
 		<div class="container">
 			<p>
-				<p>I am a data engineer, with 5+ years of experience in developing efficient
+				<p>I am a data engineer, with 6+ years of experience in developing efficient
 				solutions for obtaining data driven
 				insights. Actively involved in
 				Open-source contributions. I have an extensive experience in developing and maintaining 
@@ -118,7 +213,7 @@
 		<div class="container">
 			<div class="units-row">
 			    <div class="unit-50">
-			    	<p></p>
+			    	<p style="color: rgb(78, 78, 78)!important;">Feel free to connect with me:</p>
 			    </div>
 			    <div class="unit-50">
 					<ul class="social list-flat right">
