Fixing the indentation of the header content

--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
 			align-content: center;
 			padding-left: 32%;
 			padding-right: 10%;
-			padding-top: 5%;
-			margin-bottom: 10%;
-			padding-bottom: 5%;
+			padding-top: 15%;
+			/* margin-bottom: 10%; */
+			/* padding-bottom: 5%; */
 			/* font-size: 40vw;
 			font-size: 50vh; */
 			font-size: 600%;
@@ -102,11 +102,11 @@
 			align-items: center;
 			align-self: auto;
 			align-content: center;
-			padding-left: 93%;
+			padding-left: 88%;
 			padding-right: 10%;
-			padding-top: 5%;
-			margin-bottom: 10%;
-			padding-bottom: 5%;
+			padding-top: 35%;
+			/* margin-bottom: 10%; */
+			/* padding-bottom: 5%; */
 			/* font-size: 40vw;
 			font-size: 50vh; */
 			font-size: 300%;
